Add code and output display to index.html

--- a/01-Git-Test/index.html
+++ b/01-Git-Test/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<script src="script.js"></script>
-</head>
 <body>
+	<h1>Title</h1>
+	<p>Description</p>
+	
+	<h2>Code</h2>
+	<code id="code"></code>
+	
+	<h2>Output</h2>
+	<samp id="output"></samp>
+	
+	<script src="script.js"></script>
 </body>
 </html>
