Add <pre> elements around <code> in Git Test index.html template

--- a/01-Git-Test/index.html
+++ b/01-Git-Test/index.html
@@ -5,7 +5,7 @@
 	<p>Description</p>
 	
 	<h2>Code</h2>
-	<code id="code"></code>
+	<pre><code id="code"></code></pre>
 	
 	<h2>Output</h2>
 	<samp id="output"></samp>
